--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -86,6 +86,8 @@
   --select-dropdown-bg: #ffffff;
   --select-dropdown-text: #000000;
   --select-dropdown-highlight-bg: #eeeeee;
+  --header-coti: #D5DBF7;
+  --header-margen: #DBF7D3;
 }
 
 html {
@@ -138,6 +140,9 @@ body[data-bs-theme="dark"] {
   --select-dropdown-bg: #2d3440;
   --select-dropdown-text: #ffffff;
   --select-dropdown-highlight-bg: #445066;
+
+  --header-coti: #5C66A8;
+  --header-margen: #88C58A;
 }
 
 
@@ -185,6 +190,36 @@ body[data-bs-theme="dark"] {
   font-size: 0.69rem;
   color: #ffffff;
 }
+
+.collapse {
+  transition: height 0.35s ease;
+  /* Además agrega overflow hidden para que no se vea contenido fuera */
+  overflow: hidden;
+}
+
+.cotiaziones-header {
+  background-color: var(--header-coti) !important;
+  color: var(--text-color) !important;
+}
+
+.margen-header {
+  background-color: var(--header-margen) !important;
+  color: var(--text-color) !important;
+}
+
+/* .collapse-inner>div {
+  display: flex;
+  border-bottom: 1px solid #dee2e6;
+  background-color: white;
+  padding: 0.5rem 1rem;
+  text-align: center;
+} */
+
+/* .collapse-inner > div:last-child {
+    border-bottom: 1px solid #dee2e6;
+} */
+
+
 
 
 
